@@ -1,5 +1,10 @@
 2011-04-04 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/ralloc2.cc:
+	  Do not allocate operands to hl when the code generator will use (hl) for the result in addition.
+
+2011-04-04 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/gen.c:
 	  Fix for restoring of register iy when other register pairs are restored as well.
 
